--- a/corano/index.html
+++ b/corano/index.html
@@ -540,7 +540,8 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-6.jpg" alt="product">
+                                        <!-- <img class="pri-img" src="assets/img/product/product-6.jpg" alt="product"> -->
+                                        <img class="pri-img" src="assets/img/product/gold-wedding-ring.jpg" alt="product">
                                         <img class="sec-img" src="assets/img/product/product-13.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
@@ -593,7 +594,8 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-7.jpg" alt="product">
+                                        <!-- <img class="pri-img" src="assets/img/product/product-7.jpg" alt="product"> -->
+                                        <img class="pri-img" src="assets/img/product/mony-ring.jpg" alt="product">
                                         <img class="sec-img" src="assets/img/product/product-9.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
@@ -646,7 +648,8 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-8.jpg" alt="product">
+                                        <!-- <img class="pri-img" src="assets/img/product/product-8.jpg" alt="product"> -->
+                                        <img class="pri-img" src="assets/img/product/diamond-ring.jpg" alt="product">
                                         <img class="sec-img" src="assets/img/product/product-11.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
@@ -696,8 +699,10 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-16.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-10.jpg" alt="product">
+                                        <!-- <img class="pri-img" src="assets/img/product/product-16.jpg" alt="product"> -->
+                                        <img class="pri-img" src="assets/img/product/silver-ring.jpg" alt="product">
+                                        <!-- <img class="sec-img" src="assets/img/product/product-10.jpg" alt="product"> -->
+                                        <img class="sec-img" src="assets/img/product/mony-ring.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -749,7 +754,8 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-10.jpg" alt="product">
+                                        <!-- <img class="pri-img" src="assets/img/product/product-10.jpg" alt="product"> -->
+                                        <img class="pri-img" src="assets/img/product/mony-ring.jpg" alt="product">
                                         <img class="sec-img" src="assets/img/product/product-9.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
@@ -802,7 +808,8 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-1.jpg" alt="product">
+                                        <!-- <img class="pri-img" src="assets/img/product/product-1.jpg" alt="product"> -->
+                                          <img class="pri-img" src="assets/img/product/gold-wedding-ring.jpg" alt="product">
                                         <img class="sec-img" src="assets/img/product/product-18.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
@@ -855,7 +862,8 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-2.jpg" alt="product">
+                                        <!-- <img class="pri-img" src="assets/img/product/product-2.jpg" alt="product"> -->
+                                        <img class="pri-img" src="assets/img/product/mony-ring.jpg" alt="product">
                                         <img class="sec-img" src="assets/img/product/product-17.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
@@ -908,8 +916,10 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-3.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-16.jpg" alt="product">
+                                        <!-- <img class="pri-img" src="assets/img/product/product-3.jpg" alt="product"> -->
+                                        <img class="pri-img" src="assets/img/product/diamond-ring.jpg" alt="product">
+                                        <!-- <img class="sec-img" src="assets/img/product/product-16.jpg" alt="product"> -->
+                                        <img class="sec-img" src="assets/img/product/silver-ring.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -958,7 +968,8 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-4.jpg" alt="product">
+                                        <!-- <img class="pri-img" src="assets/img/product/product-4.jpg" alt="product"> -->
+                                        <img class="pri-img" src="assets/img/product/silver-ring.jpg" alt="product">
                                         <img class="sec-img" src="assets/img/product/product-15.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
@@ -1011,7 +1022,8 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-5.jpg" alt="product">
+                                        <!-- <img class="pri-img" src="assets/img/product/product-5.jpg" alt="product"> -->
+                                        <img class="pri-img" src="assets/img/product/mony-ring.jpg" alt="product">
                                         <img class="sec-img" src="assets/img/product/product-14.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
@@ -1795,7 +1807,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="copyright-text text-center">
-                            <p>&copy; 2022 <b>Jevoo Jewellery</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
+                            <p>&copy; 2025 <b>Jevoo Jewellery</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
                         </div>
                     </div>
                 </div>
@@ -1872,7 +1884,7 @@
                                         <span class="price-old"><del>$90.00</del></span>
                                     </div>
                                     <h5 class="offer-text"><strong>Hurry up</strong>! offer ends in:</h5>
-                                    <div class="product-countdown" data-countdown="2022/12/20"></div>
+                                    <div class="product-countdown" data-countdown="2025/12/20"></div>
                                     <div class="availability">
                                         <i class="fa fa-check-circle"></i>
                                         <span>200 in stock</span>
