--- a/corano/draggable-grid-section.html
+++ b/corano/draggable-grid-section.html
@@ -16,104 +16,207 @@
                         <div class="draggable-grid-container">
                             <div class="grid">
                                 <div class="column">
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="3"><img src="assets/draggable-grid/public/img-3.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="7"><img src="assets/draggable-grid/public/img-7.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="2"><img src="assets/draggable-grid/public/img-2.png" alt="Jewelry Piece" /></div>
                                     </div>
                                 </div>
                                 <div class="column">
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="3"><img src="assets/draggable-grid/public/img-3.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="7"><img src="assets/draggable-grid/public/img-7.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
                                     </div>
                                 </div>
                                 <div class="column">
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="2"><img src="assets/draggable-grid/public/img-2.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
                                     </div>
                                 </div>
                                 <div class="column">
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="3"><img src="assets/draggable-grid/public/img-3.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="2"><img src="assets/draggable-grid/public/img-2.png" alt="Jewelry Piece" /></div>
                                     </div>
                                 </div>
                                 <div class="column">
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="3"><img src="assets/draggable-grid/public/img-3.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
                                     </div>
                                 </div>
                                 <div class="column">
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="2"><img src="assets/draggable-grid/public/img-2.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
                                         <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
                                     </div>
-                                    <div class="product">
+                                    <div class="product marquee-item">
+                                        <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                </div>
+                                <!-- Duplicate columns for seamless infinite scroll -->
+                                <div class="column">
+                                    <div class="product marquee-item">
+                                        <div data-id="3"><img src="assets/draggable-grid/public/img-3.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="7"><img src="assets/draggable-grid/public/img-7.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="2"><img src="assets/draggable-grid/public/img-2.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                </div>
+                                <div class="column">
+                                    <div class="product marquee-item">
+                                        <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="3"><img src="assets/draggable-grid/public/img-3.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="7"><img src="assets/draggable-grid/public/img-7.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                </div>
+                                <div class="column">
+                                    <div class="product marquee-item">
+                                        <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="2"><img src="assets/draggable-grid/public/img-2.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                </div>
+                                <div class="column">
+                                    <div class="product marquee-item">
+                                        <div data-id="3"><img src="assets/draggable-grid/public/img-3.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="2"><img src="assets/draggable-grid/public/img-2.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                </div>
+                                <div class="column">
+                                    <div class="product marquee-item">
+                                        <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="3"><img src="assets/draggable-grid/public/img-3.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                </div>
+                                <div class="column">
+                                    <div class="product marquee-item">
+                                        <div data-id="5"><img src="assets/draggable-grid/public/img-5.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="6"><img src="assets/draggable-grid/public/img-6.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="2"><img src="assets/draggable-grid/public/img-2.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
+                                        <div data-id="1"><img src="assets/draggable-grid/public/img-1.png" alt="Jewelry Piece" /></div>
+                                    </div>
+                                    <div class="product marquee-item">
                                         <div data-id="4"><img src="assets/draggable-grid/public/img-4.png" alt="Jewelry Piece" /></div>
                                     </div>
                                 </div>
