--- a/corano/index.html
+++ b/corano/index.html
@@ -474,6 +474,24 @@
                             <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
                             <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
                         </div>
+                        <!-- Fifth column -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Sixth column -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Seventh column -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                        </div>
 
                         <!-- Duplicate set for seamless loop -->
                         <!-- First column (duplicate) -->
@@ -499,6 +517,24 @@
                             <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
                             <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
                             <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Fifth column (duplicate) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Sixth column (duplicate) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Seventh column (duplicate) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
                         </div>
                     </div>
                 </div>
